@@ -75,3 +75,4 @@ require 'gecoder/interface/constraints/set/relation'
 require 'gecoder/interface/constraints/set/cardinality'
 require 'gecoder/interface/constraints/set/connection'
 require 'gecoder/interface/constraints/set/operation'
+require 'gecoder/interface/constraints/set/channel'
