@@ -5,6 +5,7 @@
 * Added constants in Model that contain the limits of the variables' domains.
 * The domain when construction arrays and matrices of int variables now default to the same as when creating single variables (the largest possible domain).
 * Model#branch_on now accepts single variables as well as enums.
+* Added channel constraints between single set variables and enumerations of boolean variables.
 
 == Version 0.8.2
 This release adds search statistics along with some new arithmetic constraints 
